[nada] fixing button align in entry pages; dropdown selec, tooltip & calendar height in safari

--- a/src/assets/styles/custom/avatar.scss
+++ b/src/assets/styles/custom/avatar.scss
@@ -36,7 +36,6 @@ $img-more : #3E83FF;
     position: relative;
     figure {
       position: relative;
-      margin-right: -5px;
     }
 
     &.is-text {
