--- a/src/assets/styles/custom/tooltip.scss
+++ b/src/assets/styles/custom/tooltip.scss
@@ -5,5 +5,6 @@
 		width: max-content;
 		white-space: normal;
 		font-family: "Avenir Next Regular";
+		padding: 10px;
 	}
 }
